apps/base/media/prowlarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
        
    spec:
      restartPolicy: Always

      containers:
      - name: prowlarr
        image: lscr.io/linuxserver/prowlarr:2.6.5.5623-ls162

        ports:
        - containerPort: 9696
          protocol: TCP

        volumeMounts:
        - name: config
          mountPath: /config

      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: prowlarr-config-pvc
