apps/base/media/prowlarr/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: prowlarr-svc            
  namespace: media
spec:
  selector:
    app: prowlarr       
  ports:
  - name: web
    port: 9696
    protocol: TCP
    targetPort: 9696
  type: ClusterIP
