apps/base/media/prowlarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr-ingress
  namespace: media
  # annotations:
  #   traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: prowlarr.mkped.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr-svc
                port:
                  number: 9696
  tls:
  - secretName: prowlarr-certificate-secret
